--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <section class="showcase">
-        <video src="/FANTASY TRAVEL/video.mp4" muted loop autoplay></video>
+        <video src="video.mp4" muted loop autoplay></video>
         
         <div class="overlay"></div>
  </section>
@@ -63,8 +63,8 @@
     
 
 
-<script src="/FANTASY TRAVEL/Scripts/forecast.js"></script>
-<script src="/FANTASY TRAVEL/Scripts/app.js"></script>
+<script src="Scripts/forecast.js"></script>
+<script src="Scripts/app.js"></script>
 
 </body>
 </html>
