--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     
 
 
-<script src="Scripts/forecast.js"></script>
-<script src="Scripts/app.js"></script>
+<script src="forecast.js"></script>
+<script src="app.js"></script>
 
 </body>
 </html>
